--- a/package.json
+++ b/package.json
@@ -10,14 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@radix-ui/react-icons": "^1.3.0",
     "@tailwindcss/forms": "^0.5.9",
     "@types/d3": "^7.4.3",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "d3": "^7.9.0",
     "date-fns": "^3.6.0",
+    "lucide-react": "^0.441.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
-    "react-router-dom": "^6.26.2"
+    "react-router-dom": "^6.26.2",
+    "tailwind-merge": "^2.5.2",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
